# watermark_correlations_tests

./: README.md  calc_correlations.py  detect_watermark.py  embed_watermarks.py  filter_watermarks.py  find_threshold.py  main.py  plot_thresholds.py
results/: results
results/10/: correlations_dct_watermark_10.csv  correlations_dct_watermark_10_blur.csv  correlations_dct_watermark_10_bright.csv  correlations_dct_watermark_10_contrast.csv  correlations_dct_watermark_10_dark.csv  correlations_dct_watermark_10_dctdnoiz_10.csv  correlations_dct_watermark_10_dctdnoiz_15.csv  correlations_dct_watermark_10_dctdnoiz_5.csv  correlations_dct_watermark_10_fftdnoiz_15.csv  correlations_dct_watermark_10_fftdnoiz_5.csv  correlations_dct_watermark_10_light.csv  correlations_dct_watermark_10_nlmeans_10.csv  correlations_dct_watermark_10_nlmeans_15.csv  correlations_dct_watermark_10_nlmeans_5.csv  correlations_dct_watermark_10_noise.csv  correlations_dct_watermark_10_pixelize.csv  correlations_dct_watermark_10_sharp.csv  correlations_wo_embedding_dct_watermark_10.csv  (+9 more)
tests/: filter.py
watermarks/: dct_watermark.py
watermarks_implementation/: .gitlab-ci.yml  README.md
watermarks_implementation/apps/: CMakeLists.txt  change_lsb.cpp  dct_watermark.cpp  e_perc_shape.cpp  eblind_dlc.cpp  eblind_dlc_dctdniz_robust.cpp
watermarks_implementation/src/: CMakeLists.txt  DCT.cpp  DCT.h  DCTWatermark.cpp  DCTWatermark.h  Detector.cpp  Detector.h  EBlindDLC.cpp  EBlindDLC.h  EBlindDLC_DctDniz_Robust.cpp  EBlindDLC_DctDniz_Robust.h  EPercShape.cpp  EPercShape.h  VideoFrame.cpp  VideoFrame.h  VideoFrameBlockProcessor.cpp  VideoFrameBlockProcessor.h  VisualMasking.cpp  VisualMasking.h  Watermark.h  WatermarkReference.cpp
(+64 files in other folders)
